<resources>
    <string name="app_name">BattletechQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="lastQuestion">For market research: Which Battletech era do you like best?</string>
    <string name="finish">Finish</string>
    <string name="quiz">BATTLETECH Quiz</string>
    <string name="enter_player_name">Enter player name here</string>
    <string name="pledgeAllegiance">Choose your House</string>
    <string name="Kurita">Kurita</string>
    <string name="Steiner">Steiner</string>
    <string name="Marik">Marik</string>
    <string name="Davion">Davion</string>
    <string name="Liao">Liao</string>
    <string name="era1">Late Succession Wars (2901 – 3049)</string>
    <string name="era2">Clan Invasion (3050 – 3061)</string>
    <string name="era3">Civil War (3062 – 3067)</string>
    <string name="era4">Jihad (3068 – 3080)</string>
</resources>
